refactor article structure

--- a/src/pages/partials/feedback.pug
+++ b/src/pages/partials/feedback.pug
@@ -11,10 +11,10 @@ include ./mixins.pug
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
-        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+        +card("5.0", "./img/avatar.png", 1337, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
-        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+        +card(4.2, "./img/avatar.png", 228038, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
       .carousel__item#feedback-2
