advantages layout and fix slider

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,3 +5,4 @@ block content
   include ./partials/calculator.pug
   include ./partials/steps.pug
   include ./partials/feedback.pug
+  include ./partials/advantages.pug
