--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -9,54 +9,54 @@ include ./mixins.pug
   .steps__content
     .slider-inline 
       .slider-inline__steps 
-        .slider-inline__step.slider-inline--active(data-id="step-1")
+        .slider-inline__step.slider-inline--active(data-id="stepInline-1")
           .slider-inline__number 1
           .slider-inline__text
             p.p.p--sm Das passende Thema finden
 
         .slider-inline__division
 
-        .slider-inline__step(data-id="step-2")
+        .slider-inline__step(data-id="stepInline-2")
           .slider-inline__number 2
           .slider-inline__text
             p.p.p--sm Die Gliederung erstellen
 
         .slider-inline__division
         
-        .slider-inline__step(data-id="step-3")
+        .slider-inline__step(data-id="stepInline-3")
           .slider-inline__number 3
           .slider-inline__text
             p.p.p--sm Die Facharbeit schreiben
 
         .slider-inline__division
 
-        .slider-inline__step(data-id="step-4")
+        .slider-inline__step(data-id="stepInline-4")
           .slider-inline__number 4
           .slider-inline__text
             p.p.p--sm Die Facharbeit überprüfen (lassen)
 
       .slider-inline__content
         +slideInline
-          .slider-inline__slide.slider-inline--active#step-1
+          .slider-inline__slide.slider-inline--active#stepInline-1
             .slider-inline__header
               h3.text--blue Schritt 1
               h2.text--blue Das passende Thema finden:
-            .slide__wrapper
+            .slider__wrapper#step-1
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-1-1" data-step-id="step-1") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-1-1" data-slider-id="step-1") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-2" data-step-id="step-1") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-2" data-slider-id="step-1") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-3" data-step-id="step-1") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-3" data-slider-id="step-1") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-4" data-step-id="step-1") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-4" data-slider-id="step-1") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-5" data-step-id="step-1")
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-5" data-slider-id="step-1")
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -138,26 +138,26 @@ include ./mixins.pug
               //- end slides
         
         +slideInline
-          .slider-inline__slide#step-2
+          .slider-inline__slide#stepInline-2
             .slider-inline__header
               h3.text--blue Schritt 2
               h2.text--blue Die Gliederung erstellen:
-            .slide__wrapper
+            .slider__wrapper#step-2
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-2-1" data-step-id="step-2") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-2-1" data-slider-id="step-2") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-2" data-step-id="step-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-2" data-slider-id="step-2") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-3" data-step-id="step-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-3" data-slider-id="step-2") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-4" data-step-id="step-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-4" data-slider-id="step-2") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-5" data-step-id="step-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-5" data-slider-id="step-2") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -239,26 +239,26 @@ include ./mixins.pug
               //- end slides
 
         +slideInline
-          .slider-inline__slide#step-3
+          .slider-inline__slide#stepInline-3
             .slider-inline__header
               h3.text--blue Schritt 3
               h2.text--blue Die Facharbeit schreiben:
-            .slide__wrapper
+            .slider__wrapper#step-3
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-3-1" data-step-id="step-3") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-3-1" data-slider-id="step-3") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-2" data-step-id="step-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-2" data-slider-id="step-3") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-3" data-step-id="step-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-3" data-slider-id="step-3") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-4" data-step-id="step-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-4" data-slider-id="step-3") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-5" data-step-id="step-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-5" data-slider-id="step-3") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -340,26 +340,26 @@ include ./mixins.pug
               //- end slides
 
         +slideInline
-          .slider-inline__slide#step-4
+          .slider-inline__slide#stepInline-4
             .slider-inline__header
               h3.text--blue Schritt 4
               h2.text--blue Die Facharbeit schreiben:
-            .slide__wrapper
+            .slider__wrapper#step-4
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-4-1" data-step-id="step-4") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-4-1" data-slider-id="step-4") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-2" data-step-id="step-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-2" data-slider-id="step-4") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-3" data-step-id="step-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-3" data-slider-id="step-4") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-4" data-step-id="step-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-4" data-slider-id="step-4") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-5" data-step-id="step-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-5" data-slider-id="step-4") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
