--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,6 +1,7 @@
-@import ./libs/reset
-@import ./imports/_vars
-@import ./imports/_fonts
+@import "./libs/reset"
+@import "./imports/_vars"
+@import "./imports/_fonts"
+
 *
   box-sizing: border-box
   margin: 0
@@ -34,10 +35,10 @@ main.wrapper
     max-width: 1180px
     width: 100%
 
-@import imports/typo
-@import ./imports/btn
-@import ./imports/dropdown
-@import './imports/header'
+@import "./imports/typo"
+@import "./imports/btn"
+@import "./imports/dropdown"
+@import "./imports/header"
 @import "./imports/thesis"
 @import "./imports/article"
 @import "./imports/note"
@@ -50,3 +51,4 @@ main.wrapper
 @import "./imports/card"
 @import './imports/slider'
 @import './imports/carousel'
+@import './imports/advantages'
