--- a/src/pages/partials/thesis.pug
+++ b/src/pages/partials/thesis.pug
@@ -13,7 +13,7 @@ include ./mixins.pug
 
     section.thesis__section
         +articleWrapper(true)
-            +article("Die Anforderungen an eine Facharbeit")
+            +article("Die Anforderungen an eine Facharbeit", true)
                 p.p--md.text--light-gray In Deutschland, sprich: an verschiedenen Schulen bestehen zum Teil deutliche Unterschiede hinsichtlich den Anforderungen an eine Facharbeit; sie beziehen sich vor allem auf den Umfang, die gewährte Schreibfrist und den Grad an notwendigen Kompetenzen. Zudem können die Erwartungen der einzelnen Dozenten mehr oder weniger weit auseinanderliegen.
                 p.p--md.text--light-gray Da die wissenschaftliche Aufgabe normalerweise die erste Begegnung mit dem akademischen Anspruch an Selbständigkeit, Wissensvolumen und Kohärenz ist, stellt die Facharbeit für die meisten Schüler und Schülerinnen eine große Herausforderung dar.
             
