--- a/src/sass/imports/article.sass
+++ b/src/sass/imports/article.sass
@@ -10,6 +10,13 @@
   justify-content: flex-start
   gap: 2rem
 
+  &--pt
+    margin-top: 8.8rem
+  &--pt-md
+    margin-top: 13.8rem
+  &--pt-sm
+    margin-top: 5.8rem
+
 .article__title
   line-height: 5rem
 .article__text
@@ -21,6 +28,11 @@
 .article__footer
   margin-top: 3rem
 
+  &--center
+    width: 80%
+    margin-left: auto
+    margin-right: auto
+
 .article__info
   position: relative
   max-width: 48%
@@ -28,7 +40,7 @@
   display: flex
   flex-direction: column
   justify-content: flex-end
-  
+
 .article__img
   position: absolute
   width: 100%
@@ -37,8 +49,6 @@
 
 .article__wrapper--reverse
   flex-direction: row-reverse
-  .article__content
-    margin-top: 8.8rem
   .article__info
     position: relative
     max-width: 48%
