refactor open\close arrow in dropdown

--- a/src/pages/partials/calculator.pug
+++ b/src/pages/partials/calculator.pug
@@ -5,7 +5,7 @@
             p.p--sm.text--light-gray Bitte fülle alle nötigen Felder aus und der Preisrechner zeigt dir den Preis
         .calculator__form-wrapper
             .calculator__form
-                .dropdown.workType(tabindex="0")
+                .dropdown.workType.arrow(tabindex="0")
                     label.dropdown__label#workType(data-value="") Work type
                     ul.dropdown__list
                         li.dropdown__item(data-value="1") Schreiben
@@ -13,7 +13,7 @@
                         li.dropdown__item(data-value="3") Lektorat
 
 
-                .dropdown.academicLevel(tabindex="0")
+                .dropdown.academicLevel.arrow(tabindex="0")
                     label.dropdown__label#academicLevel(data-value="") Academic Level
                     ul.dropdown__list
                         li.dropdown__item(data-value="1") Ausbildung
@@ -36,7 +36,7 @@
                             .arrows.next-mth &gt;
                         .days
 
-                .dropdown.paperType(tabindex="0")
+                .dropdown.paperType.arrow(tabindex="0")
                     label.dropdown__label#paperType(data-value="") Paper type
                     ul.dropdown__list
                         li.dropdown__item(data-value="1") Bachelorarbeit
@@ -45,7 +45,7 @@
                         li.dropdown__item(data-value="4") Exposé
 
 
-                .dropdown.subj(tabindex="0")
+                .dropdown.subj.arrow(tabindex="0")
                     label.dropdown__label#subj(data-value="") Academic Level
                     ul.dropdown__list
                         li.dropdown__item(data-value="1") Mathematik
