--- a/src/pages/partials/js.pug
+++ b/src/pages/partials/js.pug
@@ -2,3 +2,4 @@ script(src="./js/dropdown.min.js")
 script(src="./js/datePicker.min.js")
 script(src="./js/sliderInline.min.js")
 script(src="./js/slider.min.js")
+script(src="./js/arrow.min.js")
