--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,3 +6,4 @@ block content
   include ./partials/steps.pug
   include ./partials/feedback.pug
   include ./partials/advantages.pug
+  include ./partials/faq.pug
