--- a/src/pages/partials/advantages.pug
+++ b/src/pages/partials/advantages.pug
@@ -48,5 +48,5 @@ include ./mixins.pug
     +articleWrapper(true)
       +article("", false, false, true)
         p.p.p--md.text--light-gray Tippfehler, grammatikalische Fehler und eine unpassende äußere Form (Schriftgröße etc.) machen ebenfalls einen schlechten Eindruck. Um dies zu vermeiden, muss die Facharbeit immer wieder überprüft und korrigiert werden. Ein Dozent wird sofort merken, wenn nicht gründlich gearbeitet wurde! Eine unachtsame Arbeitsweise steht synonym für die negativ behaftete Einstellung des/der Studierenden zu der Aufgabe und somit gegen den Autor selbst.
-      +articleInfo("./img/advantage-4.svg", true, true)
+      +articleInfo("./img/advantage-4.svg", true, true, true)
         p.p.p--md.text--light-gray Das Sichten, Auswählen und Sortieren von Quellen nimmt viel Zeit in Anspruch und ist äußerst arbeitsintensiv.
