--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -43,6 +43,7 @@ main.wrapper
 @import "./imports/article"
 @import "./imports/note"
 @import "./imports/input"
+@import "./imports/arrow"
 @import "./imports/calculator"
 @import "./imports/datePicker"
 @import "./imports/steps"
@@ -52,3 +53,4 @@ main.wrapper
 @import './imports/slider'
 @import './imports/carousel'
 @import './imports/advantages'
+@import './imports/faq'
