--- a/src/pages/partials/js.pug
+++ b/src/pages/partials/js.pug
@@ -1,3 +1,4 @@
+script(src="./js/libs.min.js")
 script(src="./js/dropdown.min.js")
 script(src="./js/datePicker.min.js")
 script(src="./js/sliderInline.min.js")
