--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,5 +1,7 @@
 extends ./layouts/index.pug
 
+include ./partials/mixins.pug
+
 block content
   include ./partials/thesis.pug
   include ./partials/calculator.pug
