--- a/src/sass/imports/faq.sass
+++ b/src/sass/imports/faq.sass
@@ -34,7 +34,7 @@
   gap: 1.4rem
 
   overflow: hidden
-  height: 5.6rem
+  height: 6.4rem
   transition: all .2s linear
 
   &--open
@@ -42,6 +42,7 @@
 
 .faq__card__header
   position: relative
+  line-height: 3rem
 
 .faq__card__line
   border: 1px solid $bg
