added carousel js

--- a/src/pages/partials/feedback.pug
+++ b/src/pages/partials/feedback.pug
@@ -6,7 +6,7 @@
       p.p.p--md.text--light-gray Lass dich von den Erfolgsgeschichten unserer Kunden inspirieren!
   .feedback__content
     .carousel#feedback
-      .carousel__item#feedback-1
+      .carousel__content
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
@@ -16,7 +16,6 @@
         +card(4.2, "./img/avatar.png", 228038, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
-      .carousel__item#feedback-2
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
@@ -26,7 +25,6 @@
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
       
-      .carousel__item#feedback-3
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
@@ -36,7 +34,6 @@
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
     
-      .carousel__item#feedback-4
         +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
           p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
