--- a/src/pages/partials/js.pug
+++ b/src/pages/partials/js.pug
@@ -4,3 +4,4 @@ script(src="./js/datePicker.min.js")
 script(src="./js/sliderInline.min.js")
 script(src="./js/slider.min.js")
 script(src="./js/arrow.min.js")
+script(src="./js/carousel.min.js")
