--- a/src/sass/imports/feedback.sass
+++ b/src/sass/imports/feedback.sass
@@ -2,12 +2,13 @@
   display: flex
   flex-direction: column
   align-items: center
-  line-height: 38px
+  line-height: 3.8rem
   text-align: center
   margin-bottom: 2.5rem
 
 .feedback__content
   margin-bottom: 3rem
+
 
 .feedback__footer
   display: flex
